# signaltracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SignalTracer.sln
SignalTracer/: SignalTracer.vcxproj  SignalTracer.vcxproj.filters  access_point.hpp  actions.cpp  actions.hpp  attenuation.cpp  attenuation.hpp  cutting_plane.cpp  cutting_plane.hpp  drawable_interface.hpp  fragment.glsl  heatmap.cpp  heatmap.hpp  importer.cpp  importer.hpp  logger.hpp  main.cpp  marker.cpp  marker.hpp  matrix.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  opengl.hpp  pipeline.hpp  quaternion.cpp  raycast.cpp  raycast.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  types.hpp  vector.cpp  vector.hpp  vertex.glsl  vertex.hpp  window.cpp  window.hpp
glsl/: vertex.glsl
include/: access_point.hpp  actions.hpp  attenuation.hpp  configuration.hpp  cutting_plane.hpp  drawable_interface.hpp  heatmap.hpp  importer.hpp  logger.hpp  marker.hpp  matrix.hpp  mesh.hpp  model.hpp  opengl.hpp  pipeline.hpp  quaternion.hpp  raycast.hpp  renderer.hpp  shaders.hpp  stats.hpp  types.hpp  vector.hpp  vertex.hpp  window.hpp
package/: FindASSIMP.cmake
src/: actions.cpp  attenuation.cpp  configuration.cpp  cutting_plane.cpp  heatmap.cpp  importer.cpp  main.cpp  marker.cpp  matrix.cpp  mesh.cpp  model.cpp  quaternion.cpp  raycast.cpp  renderer.cpp  shaders.cpp  vector.cpp  window.cpp
test/: plan-params.json  plan.fbx
